After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700552 - Changing process list view while properties window is open causes segfault
Changing process list view while properties window is open causes segfault
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: process list
git master
Other Linux
: Normal critical
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-17 19:45 UTC by Kristian Laakkonen
Modified: 2013-05-17 22:57 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Kristian Laakkonen 2013-05-17 19:45:10 UTC
If the "View" option in process list is changed while the properties window of a process is open, the program crashes sometimes.

It looks like this bug is nearly the same as bug 683671, even the stack trace is identical. That bug doesn't happen anymore.

Steps to reproduce:

1) Open gnome-system-monitor and select the "Processes" tab.
2) Select "All Processes" from the "View" dropdown.
3) Right-click on some process (e.g. gnome-system-monitor itself) and select "Properties".
4) Change the selection in the "View" dropdown to e.g. "My Processes".
5) Wait for the crash to happen.
The crash happens both when the "Dependencies" option is checked and unchecked.

This happens with the latest version compiled from git. I tried this on Ubuntu 13.04.

Stack trace:
  • #0 vfprintf
    from /lib/i386-linux-gnu/libc.so.6
  • #1 __vasprintf_chk
    from /lib/i386-linux-gnu/libc.so.6
  • #2 g_vasprintf
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #3 g_strdup_vprintf
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #4 g_strdup_printf
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #5 fill_proc_properties
    at procproperties.cpp line 129
  • #6 update_procproperties_dialog
    at procproperties.cpp line 175
  • #7 procprop_timer
    at procproperties.cpp line 234
  • #8 ??
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #9 g_main_context_dispatch
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #10 ??
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #11 g_main_context_iteration
    from /lib/i386-linux-gnu/libglib-2.0.so.0
  • #12 g_application_run
    from /usr/lib/i386-linux-gnu/libgio-2.0.so.0
  • #13 Gio::Application::run(int, char**)
    from /usr/lib/i386-linux-gnu/libgiomm-2.4.so.1
  • #14 Gtk::Application::run(int, char**)
    from /usr/lib/i386-linux-gnu/libgtkmm-3.0.so.1
  • #15 main
    at procman.cpp line 41

Comment 1 Robert Roth 2013-05-17 22:57:16 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.