Fix segfault on view mode change with process properties open. https://bugzilla.gnome.org/show_bug.cgi?id=700552